# pr-reviewer-assignment-service

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: d44a5aa39270_initial_migration.py
app/: main.py  settings.py
app/api/v1/: router.py
app/api/v1/pull_requests/: router.py
app/api/v1/stats/: router.py
app/api/v1/team/: router.py
app/api/v1/users/: router.py
app/domain/: models.py
app/infrastructure/db/: database.py  models.py
app/services/pull_requests/: pull_requests_service.py
app/services/stats/: stats_service.py
app/services/teams/: teams_service.py
app/services/users/: users_service.py
docker/: entrypoint.sh
