[project]
name = "pr-reviewer-assignment-service"
version = "0.1.0"
description = ""
authors = [
    {name = "eruph",email = "kopylovnikita2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
package-mode = false
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
